test/invalid-syntax/58250_invalid_syntax_invalid_assignment/58250_invalid_syntax_invalid_assignment.agu
-- Author: 58250, Leonardo Monteiro

let a : Int = 17
a = 22  -- should be "set a = 20"